// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept Popper props 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-5 {
  font-weight: bold;
  color: #4d4d4d;
  white-space: nowrap;
  list-style: none;
  margin: 0;
  padding: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
  border: 1px solid #e6e6e6;
  border-radius: 2px;
  display: inline-block;
  width: auto;
  min-width: 150px;
  background: #ffffff;
  text-align: left;
}

.emotion-1 {
  display: block;
  padding: 0.5rem 1rem;
  font-size: 0.875rem;
  color: #666666;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  background: #f2f2f7;
}

.emotion-2 {
  margin: 0;
}

.emotion-2 div {
  display: block;
}

.emotion-2:first-child a {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.emotion-2:last-child a {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-6 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1050;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-0"
  >
    <span />
  </div>
  <div
    class="emotion-6"
    style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
  >
    <ul
      class="emotion-5"
    >
      <li
        class="emotion-2"
      >
        <a
          class="emotion-1"
        >
          Item #1
        </a>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-1"
        >
          Item #2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-6 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1050;
  padding: 0.25rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-5 {
  font-weight: bold;
  color: #4d4d4d;
  white-space: nowrap;
  list-style: none;
  margin: 0;
  padding: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
  border: 1px solid #e6e6e6;
  border-radius: 2px;
  display: inline-block;
  width: auto;
  min-width: 150px;
  background: #ffffff;
  text-align: left;
}

.emotion-1 {
  display: block;
  padding: 0.5rem 1rem;
  font-size: 0.875rem;
  color: #666666;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  background: #f2f2f7;
}

.emotion-2 {
  margin: 0;
}

.emotion-2 div {
  display: block;
}

.emotion-2:first-child a {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.emotion-2:last-child a {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-0"
  >
    <span />
  </div>
  <div
    class="emotion-6"
    style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
  >
    <ul
      class="emotion-5"
    >
      <li
        class="emotion-2"
      >
        <a
          class="emotion-1"
        >
          Item #1
        </a>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-1"
        >
          Item #2
        </a>
      </li>
    </ul>
  </div>
</div>
`;
